--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,18 @@ body {
     padding: 1em;
     padding-left: 300px;
     padding-right: 300px;
+}
 
+ul {
+    list-style-type: none; 
+    margin: 0;
+    padding: 0;
+    display: flex;
+    gap: 16px;
+}
+
+li {
+    margin-bottom: 12px;
 }
 
 .content-one {
@@ -24,6 +35,60 @@ body {
     justify-content: space-between;
     padding: 100px 300px;
     background: #1F2937;
+}
+
+.maintext {
+    font-size: 48px;
+    color: #f9FAF8;
+    font-weight: 900;
+    width: 400px;
+    margin-bottom: 8px;
+}
+
+.subtext {
+    font-size: 18px;
+    color: #E5E7EB;
+    width: 450px;
+    margin-bottom: 16px;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.block-one {
+    padding-right: 12px;
+}
+
+.block-two img {
+    height: 250px;
+    width: 500px;
+}
+
+a {
+    font-size: 18px;
+    color: #E5E7EB;
+    text-decoration: none;
+}
+
+.logo-text {
+    font-size: 24px;
+    color: #F9FAF8;
+    font-weight: bold;
+}
+
+button {
+    padding-left: 25px;
+    padding-right: 25px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    border-radius: 10px;
+    font-size: 18PX;
+}
+
+.sign-up-top {
+    background: #3882F6;
+    border:#3882F6;
+    color: #F9FAF8;
+    font-weight: 600;
 }
 
 .content-two {
@@ -69,9 +134,9 @@ body {
 .content-three {
     display: flex;
     flex-direction: column;
+    align-items: center;
     padding: 100px 300px;
     background: #E5E7EB;
-    
 }
 
 .quote-text {
@@ -87,88 +152,45 @@ body {
     justify-content: flex-end;
     align-items: center;
     font-weight: 900;
-    width: 900px;
+    width: 800px;
 }
 
 .content-four {
     display: flex;
-    border: 2px solid red;
-    padding: 1em;
-    padding-left: 300px;
-    padding-right: 300px;
+    justify-content: space-between;
+    border: solid #3882F6;
+    border-radius: 10px;
+    padding: 100px 200px;
+    background:#3882F6;
+    margin: 100px 200px;
+}
+
+.action-text {
+    color: #F9FAF8;
+    font-size: 18px;
+    font-weight: bold;
+    margin-bottom: 8px;
+}
+
+.action-subtext {
+    color: #F9FAF8;
+    font-size: 18px;
+    font-weight: 100px;
+}
+
+.sign-up-bottom {
+    color:#F9FAF8;
+    border: solid #F9FAF8;
+    background-color: #3882F6;
+    border-radius: 10px;
+    padding: 8px 35px;
 }
 
 .footer {
     display: flex;
-    border: 2px solid red;
+    background: #1F2937;
+    color: #F9FAF8;
     padding: 1em;
     justify-content: center;
     align-items: center;
-}
-
-ul {
-    list-style-type: none; 
-    margin: 0;
-    padding: 0;
-    display: flex;
-    gap: 16px;
-}
-
-li {
-    margin-bottom: 12px;
-}
-
-.block-two img {
-    height: 250px;
-    width: 500px;
-}
-
-a {
-    font-size: 18px;
-    color: #E5E7EB;
-    text-decoration: none;
-
-}
-
-.logo-text {
-    font-size: 24px;
-    color: #F9FAF8;
-    font-weight: bold;
-}
-
-.block-one {
-    padding-right: 12px;
-}
-
-.maintext {
-    font-size: 48px;
-    color: #f9FAF8;
-    font-weight: 900;
-    width: 400px;
-    margin-bottom: 8px;
-}
-
-.subtext {
-    font-size: 18px;
-    color: #E5E7EB;
-    width: 450px;
-    margin-bottom: 16px;
-    display: flex;
-    flex-wrap;
-}
-
-button {
-    padding-left: 25px;
-    padding-right: 25px;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    border-radius: 10px;
-    font-size: 18PX;
-}
-
-.sign-up-top {
-    background: #3882F6;
-    border:#3882F6;
-    color: #F9FAF8;
-    font-weight: 600;
 }
